PMD7: remove redundant suppressions, imports, conversions, types, checks